--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -11,7 +11,7 @@
   </div>
   
   <div class="big-card__title">
-     <h1><a href="#">{{ cardrdTitle }}</a></h1>
+     <h1><a [routerLink]="['content', Id]">{{ cardrdTitle }}</a></h1>
   </div>
   
   <div class="big-card__description">
