--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -10,7 +10,7 @@
     </div>
   
     <div class="small-card__title">
-       <h1><a href="#">{{ cardiTitle }}</a></h1>
+       <h1><a [routerLink]="['content', Id]">{{ cardiTitle }}</a></h1>
     </div>
   </div>
   
