--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,14 +1,11 @@
-
-<header>
-  <app-menu-bar></app-menu-bar>
-</header>
-
 <app-menu-title></app-menu-title>
 
 <div class="container__articles">
   <div class="articles__main">
 
-    <app-big-card photoCover="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTqFTnUZhP5BoG2JeY2fYo2ypFduthqT_VQNQ&usqp=CAU" 
+    <app-big-card 
+    Id="1"
+    photoCover="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTqFTnUZhP5BoG2JeY2fYo2ypFduthqT_VQNQ&usqp=CAU" 
     cardrdTitle="NOVO HOMEM DE FERRO EM 3D"
     cardDescription="Marvel Anuncia novo homem de Ferro"
     >  
@@ -17,12 +14,14 @@
   </div>
   <div class="articles__others">
     <app-small-card 
+      Id="2"
       cardiTitle="Nova Série anunciada no Disney +"
       photoCover="https://disneyplusbrasil.com.br/wp-content/uploads/2021/07/Series-Marvel-Disney-Plus-1024x576.jpg"
     >
     </app-small-card>
 
     <app-small-card 
+      Id="3"
       cardiTitle="Novo filme do pantera negra lançado em breve"
       photoCover="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/F6482D58C8BB4D899FA4682BF27652C3E1BB73F5971E5F963994112F26A73690/scale?width=1200&aspectRatio=1.78&format=jpeg"
     >
@@ -30,6 +29,7 @@
     >
     
     <app-small-card
+      Id="4"
       cardiTitle="Novo filme dos X-men está em pós produção, afirma o diretor"
       photoCover="https://midias.correiobraziliense.com.br/_midias/jpg/2022/07/22/675x450/1_xmen-26096415.jpeg?20220722171339?20220722171339"
     >
